--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 body {
   font-family: "Arial", sans-serif;
-  margin: 0;
+  font-size: 16px;
+  background-color: #f5f5f5;
+  margin: 5%;
   padding: 0;
-  background-color: #f9f9f9;
 }
 
 .container {
@@ -12,24 +13,82 @@ body {
   background-color: #fff;
   border-radius: 8px;
   padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .step-nav {
   display: flex;
-  justify-content: space-between;
+  position: relative;
+  justify-content: space-around;
   margin-bottom: 20px;
+  padding: 10px;
 }
 .step-nav .step {
+  flex: 1;
+  text-align: center;
   padding: 10px;
   background-color: #8b8b8b;
-  color: white;
+  margin: 1px;
   cursor: pointer;
-  text-align: center;
   font-weight: bold;
+  color: #fff;
 }
 .step-nav .step.active {
   background-color: #ffd700;
-  color: black;
+  color: #000;
+}
+.step-nav .triangle {
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #ffd700;
+  transition: all 0.3s ease;
 }
 
-/*# sourceMappingURL=styles.css.map */
+.step-content {
+  margin-top: 20px;
+}
+.step-content form {
+  display: flex;
+  flex-direction: column;
+}
+.step-content form label {
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #30435c;
+}
+.step-content form select {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #8b8b8b;
+  font-size: 16px;
+  width: 100%;
+  outline: none;
+  background-color: #fff;
+  border-radius: 10px;
+}
+.step-content form .input-group {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.step-content form .input-group span {
+  font-weight: bold;
+  margin-left: 10px;
+}
+.step-content form button {
+  padding: 10px;
+  background-color: #00ced1;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  width: 25%;
+  margin-top: 10px;
+}/*# sourceMappingURL=styles.css.map */
