--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,7 @@ $primary-color: #ffd700;
 $secondary-color: #8b8b8b;
 $button-color: #00ced1;
 $yellow: #ffd700;
-$triangle-size: 10px;
+$triangle-size: 10;
 $font-size: 16px;
 $font-family: "Arial", sans-serif;
 
@@ -26,7 +26,6 @@ body {
     margin: 0 auto;
     background-color: #fff;
     border-radius: 8px;
-    padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -35,7 +34,7 @@ body {
     position: relative;
     justify-content: space-around;
     margin-bottom: 20px;
-    padding: 10px;
+    background-color: #f9f9f9;
 
     .step {
         flex: 1;
@@ -55,19 +54,21 @@ body {
 
     .triangle {
         position: absolute;
-        bottom: -$triangle-size;
-        left: 0;
+        bottom: -$triangle-size + px;
+        left: 50%;
         width: 0;
         height: 0;
-        border-left: $triangle-size solid transparent;
-        border-right: $triangle-size solid transparent;
-        border-top: $triangle-size solid $primary-color;
+        border-left: $triangle-size + px solid transparent;
+        border-right: $triangle-size + px solid transparent;
+        border-top: $triangle-size + px solid $primary-color;
+        transform: translateX(-50%);
         transition: all 0.3s ease;
     }
 }
 
 .step-content {
-    margin-top: 20px;
+    display: block;
+    margin: 5%;
 
     form {
         display: flex;
@@ -91,27 +92,73 @@ body {
         }
 
         .input-group {
-            position: relative;
             display: flex;
-            align-items: center;
+            flex-direction: column;
+            align-items: flex-start;
             margin-bottom: 20px;
 
-            span {
+            label {
                 font-weight: bold;
-                margin-left: 10px;
+                margin-bottom: 5px;
+                color: #30435c;
+            }
+
+            .value-box {
+                width: 80px;
+                height: 30px;
+                background-color: #fff;
+                color: $button-color;
+                font-size: 24px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-bottom: 10px;
+                border-radius: 5px;
+                border: 1px solid $secondary-color;
+                margin-bottom: 20px;
+            }
+
+            input[type="range"] {
+                width: 100%;
+                -webkit-appearance: none;
+                appearance: none;
+                background-color: $secondary-color;
+                height: 2px;
+                outline: none;
+
+                &::-webkit-slider-thumb {
+                    -webkit-appearance: none;
+                    appearance: none;
+                    background-color: $yellow;
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
+                    cursor: pointer;
+                    border: 1px solid $primary-color;
+                }
+
+                &::-moz-range-thumb {
+                    background-color: $yellow;
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
+                    cursor: pointer;
+                }
             }
         }
 
         button {
             padding: 10px;
             background-color: $button-color;
-            border: none;
+            border: 2px solid white;
             border-radius: 4px;
             color: #fff;
             cursor: pointer;
-            font-weight: bold;
-            width: 25%;
-            margin-top: 10px;
+            width: 30%;
+            margin: 10px auto;
+            display: block;
+            text-align: center;
+            box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1), 5px 5px 10px rgba(0, 0, 0, 0.1);
         }
     }
 }
