--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
 $primary-color: #ffd700;
 $secondary-color: #8b8b8b;
-$button-color: #00ced1;
+$button-color: #02afbc;
 $yellow: #ffd700;
 $triangle-size: 10;
 $font-size: 16px;
@@ -158,7 +158,85 @@ body {
             margin: 10px auto;
             display: block;
             text-align: center;
-            box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.1), 5px 5px 10px rgba(0, 0, 0, 0.1);
+            box-shadow:
+                -5px 5px 10px rgba(0, 0, 0, 0.1),
+                5px 5px 10px rgba(0, 0, 0, 0.1);
         }
+        
+.button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
     }
 }
+input[type="email"],
+input[type="tel"] {
+    padding: 10px;
+    font-size: $font-size;
+    width: 80%;
+    outline: none;
+    background-color: #fff;
+    border: none;
+    border-bottom: 2px solid $secondary-color;
+    color: #028c96;
+    transition: border-bottom-color 0.3s ease;
+    margin-bottom: 5px;
+
+    &::placeholder {
+        color: $secondary-color;
+        opacity: 0.7;
+    }
+}
+
+input[type="text"],
+input[type="number"],
+input[type="date"] {
+    padding: 10px;
+    font-size: $font-size;
+    width: 95%;
+    outline: none;
+    background-color: #fff;
+    border: none;
+    border-bottom: 2px solid $secondary-color;
+    color: $button-color;
+    transition: border-bottom-color 0.3s ease;
+
+    &:focus {
+        border-bottom-color: $button-color;
+    }
+
+    &::placeholder {
+        color: $secondary-color;
+        opacity: 0.7;
+    }
+
+    label {
+        font-weight: bold;
+        margin-bottom: 5px;
+        color: #30435c;
+    }
+}
+
+.radio-group {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 15px;
+
+    input[type="radio"] {
+        margin-right: 10px;
+        accent-color: $button-color;
+        cursor: pointer;
+    }
+
+    label {
+        margin-right: 20px;
+        font-weight: bold;
+        color: #30435c;
+        cursor: pointer;
+    }
+}
+
+
+
